--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,6 +5,16 @@ before:
     - go mod tidy
     - go install github.com/a-h/templ/cmd/templ@latest
     - templ generate
+    - >-
+      sh -c 'if [ ! -f ./bin/tailwindcss ]; then
+        mkdir -p bin &&
+        OS=$(uname -s | tr "[:upper:]" "[:lower:]") &&
+        ARCH=$(uname -m) &&
+        if [ "$ARCH" = "x86_64" ]; then ARCH="x64"; elif [ "$ARCH" = "aarch64" ]; then ARCH="arm64"; fi &&
+        curl -sLo bin/tailwindcss https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-$OS-$ARCH &&
+        chmod +x bin/tailwindcss;
+      fi'
+    - ./bin/tailwindcss -i src/css/input.css -o cmd/odoo-manager/static/css/style.css --minify
 
 builds:
   - main: ./cmd/odoo-manager
