feat: SPA client-side routing to keep SSE connection alive
- Add partial content templates (DashboardContent, AuditContent)
- Handlers return partial HTML when X-Spa header is present
- Client-side router intercepts nav link clicks, swaps <main> content
- Browser back/forward handled via popstate
- Audit SSE properly cleaned up on navigation away
- Single persistent SSE connection across all page transitions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,21 @@
             "args": ["run", "github.com/a-h/templ/cmd/templ@latest", "generate"],
             "group": "build",
             "problemMatcher": []
+        },
+        {
+            "label": "tailwind-build",
+            "type": "shell",
+            "command": ".\\bin\\tailwindcss.exe",
+            "args": ["-i", "src/css/input.css", "-o", "cmd/odoo-manager/static/css/style.css", "--minify"],
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "build-all",
+            "dependsOn": ["templ-generate", "tailwind-build"],
+            "dependsOrder": "parallel",
+            "group": "build",
+            "problemMatcher": []
         }
     ]
 }
