--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/odoo-manager",
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "templ-generate",
+            "preLaunchTask": "build-all",
             "env": {},
             "args": [],
             "serverReadyAction": {
